--- a/structuring-planet-data/blank-template.html
+++ b/structuring-planet-data/blank-template.html
@@ -9,11 +9,16 @@
   <body>
     <h1>Table template</h1>
     <table>
+      <colgroup>
+        <col />
+        <col />
+        <col style="border: 2px solid black" />
+        <!--I don't think I need to include the remaining columns, but I'm not 100% on that-->
       <thead>
         <caption>Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
         </caption>
         <tr>
-          <td></td>
+          <td colspan="2"></td>
           <th scope="col">Name</th>
           <th scope="col">Mass (10<sup>24</sup>kg)</th>
           <th scope="col">Diameter (km)</th>
@@ -28,7 +33,7 @@
       </thead>
       <tbody>
         <tr>
-          <th scope="rowgroup" rowspan="4">Terrestrial Planets</th>
+          <th scope="rowgroup"  colspan="2" rowspan="4">Terrestrial Planets</th>
           <th scope="row">Mercury</th>
           <td>0.330</td>
           <td>4,879</td>
@@ -77,7 +82,8 @@
           <td>The red planet</td>
         </tr>
         <tr>
-          <th scope="rowgroup" rowspan="2">Jovian planets</th>
+          <th scope="rowgroup" rowspan="4">Jovian planets</th>
+          <th scope="rowgroup" rowspan="2">Gas Giants</th>
           <th scope="row">Jupiter</th>
           <td>1898</td>
           <td>142,984</td>
@@ -127,7 +133,7 @@
           <td></td>
         </tr>
         <tr>
-          <th scope="row">Dwarf planets*</th>
+          <th scope="row" colspan="2">Dwarf planets*</th>
           <th scope="row">Pluto</th>
           <td>0.0146</td>
           <td>2,370</td>
