--- a/mozilla-splash-page/index.html
+++ b/mozilla-splash-page/index.html
@@ -19,6 +19,7 @@
         margin: 0 auto;
         background-color: white;
         position: relative;
+        
       }
 
       /* Header styling */
@@ -101,13 +102,13 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
-
+      <img src="firefoxlogo120.png" alt="Firefox logo">
     </header>
 
     <main>
       <article>
         <!-- insert iframe from youtube -->
-
+        <iframe width="400" height="315" src="https://www.youtube.com/embed/ojcNcvb1olg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h2>Rocking the free web</h2>
 
         <p>Mozilla are a global community of technologists, thinkers, and builders, working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
@@ -118,23 +119,46 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
+          <img
+            srcset="firefoxlogo120.png 120w, firefoxlogo400.png 400w"
+            sizes="(max-width: 500px) 120px,
+                  400px"
+            src="firefoxlogo400.png"
+            alt="the Firefox logo">
         </a>
         <a href="https://www.mozilla.org/">
-          <img>
+          <img
+            srcset="mozilladinosaur120.png 120w, mozilladinosaur400.png 400w"
+            sizes="(max-width: 500px) 120px, 
+                  400px"
+            src="mozilladinosaur400.png"
+            alt="Mozilla dinosaur head logo">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img
+            srcset="firefoxaddons120.jpg 120w, firefoxaddons400.jpg 400w"
+            sizes="(max-width: 500px) 120px,
+                  400px"
+            src="firefoxaddons400.jpg"
+            alt="Firefox logo made of puzzle pieces">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img
+            src="mdn.svg"
+            alt="Mozilla Developer Network logo">
         </a>
         <div class="clearfix"></div>
       </div>
 
       <div class="red-panda">
         <!-- insert picture element -->
+        <picture>
+          <source media="(max-width: 600px)" srcset="redpanda600.jpg">
+          <img src="redpanda1200.jpg" alt="A red panda in it's natural habitat">
+        </picture>
+
       </div>
+    
 
     </main>
   </body>
